[package]
name = "pcapng"
version = "0.0.5"
authors = ["Richo Healey <richo@psych0tik.net>"]

repository = "https://github.com/richo/pcapng-rs"
description = "a pcapng parser, implemented in rust"
license = "MIT"
documentation = "http://richo.psych0tik.net/pcapng-rs/pcapng/"

[dependencies]
nom = "^4.0"
